backend fix: user auth fixes due to firebase & firestore implementation

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,6 +27,7 @@
       "@interfaces/*": ["_common/interfaces/*"],
       "@middlewares/*": ["_common/middlewares/*"],
       "@types/*": ["_common/types/*"]
-    }
+    },
+    "resolveJsonModule": true
   }
 }
