--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,11 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.4",
+    "algoliasearch": "^4.24.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.1",
@@ -25,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-instantsearch-hooks-web": "^6.47.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "sonner": "^2.0.3",
